# afk

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  bump-version.sh  env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy-landing.yml  release.yml  test-distribution.yml  update-homebrew.yml
homebrew-tap/Casks/: afk.rb
landing/: README.md  constants.js  index.html  styles.css  vercel.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  power_monitor.rs  shortcuts.rs  state.rs  stats.rs  tray.rs  utils.rs
src/renderer/: App.css  App.tsx  Break.tsx  Overview.tsx  Settings.tsx  Stats.tsx  chimeSettings.tsx  constants.ts  exercises.ts  focusSettings.tsx  idleTimeSettings.tsx  index.tsx  longBreakSettings.tsx  preBreakSettings.tsx  shortBreakSettings.tsx  startupSettings.tsx  vite-env.d.ts
src/renderer/components/ui/: aurora-background.tsx
src/renderer/constants/: authors.ts
src/renderer/hooks/: useSetting.ts
src/renderer/lib/: analytics.ts  tauri-bridge.ts
src/renderer/types/: tauri.d.ts
