[package]
name = "afk"
version = "1.0.0"
description = "AFK - Step away from your keyboard with mindful break reminders"
authors = ["Chaitanya Aaditya <ca.chaitanya.2204@gmail.com>", "Harry-kp <chaudharyharshit9@gmail.com>"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
rodio = { version = "0.19", default-features = false, features = ["mp3"] }
parking_lot = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

